added product.html and categories.html

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 
         <div class="header__btn">
           <button class="btn">
-            <i class="fa-solid fa-bars" style="color: #ffffff"></i>
-            <span class="btn__text">Каталог</span>
+            <a href="./pages/categories.html" class="btn__icon">
+              <i class="fa-solid fa-bars fa-xl" style="color: #ffffff"></i>
+            </a>
+            <a href="./pages/categories.html" class="btn__text">Каталог</a>
           </button>
 
           <div class="header__search">
@@ -101,7 +103,7 @@
             <div class="stock__title">
               <h2 class="stock__text">Акции</h2>
               <div class="all_product">
-                <a href="#" class="product__text">Все продукты</a>
+                <a href="./pages/products.html" class="product__text">Все продукты</a>
                 <i
                   class="fa-solid fa-chevron-right"
                   style="color: #606060; padding-top: 5px"
@@ -280,11 +282,12 @@
               </div>
             </div>
           </div>
+          
           <div class="stock">
             <div class="stock__title">
               <h2 class="stock__text">Новинки</h2>
               <div class="all_product">
-                <a href="#" class="product__text">Все продукты</a>
+                <a href="./pages/products.html" class="product__text">Все продукты</a>
                 <i
                   class="fa-solid fa-chevron-right"
                   style="color: #606060; padding-top: 5px"
@@ -439,7 +442,7 @@
             <div class="stock__title">
               <h2 class="stock__text">Покупали раньше</h2>
               <div class="all_product">
-                <a href="#" class="product__text">Все продукты</a>
+                <a href="./pages/products.html" class="product__text">Все продукты</a>
                 <i
                   class="fa-solid fa-chevron-right"
                   style="color: #606060; padding-top: 5px"
@@ -818,7 +821,7 @@
         </div>
       </footer>
     </main>
-    <script src="./js/main.js"></script>
+    <script src="./js/home.js"></script>
     <script
       src="https://kit.fontawesome.com/f8ca3b2196.js"
       crossorigin="anonymous"
