pressed burger changed x mark

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -26,7 +26,10 @@
 
         <div class="header__btn">
           <button class="btn">
-            <i class="fa-solid fa-bars fa-xl" style="color: #ffffff"></i>
+            <div class="btn_icons">
+              <i class="fa-solid fa-bars fa-xl open_icon" style="color: #ffffff"></i>
+              <i class="fa-solid fa-xmark fa-xl close_icon" style="color: #ffffff;"></i>
+            </div>
             <a class="btn__text">Каталог</a>
           </button>
 
