--- a/pages/products.html
+++ b/pages/products.html
@@ -66,6 +66,26 @@
           </li>
         </ul>
 
+        <div class="header__modal">
+          <div class="modal_content">
+            <div class="modal__close">
+              <i class="fa-solid fa-xmark" style="color: #414141;"></i>
+            </div>
+            <form class="modal_form">
+              <h2 class="modal_form__title">Вход</h2>
+              <div class="modal_form__inp">
+                <label for="number" class="number_label">Телефон</label>
+                <input type="number" name="number" id="number" placeholder="Phone..." required>
+              </div>
+              <button class="modal__btn">Вход</button>
+              <div class="modal__links">
+                <a href="#" class="modal__regist">Регистрация</a>
+                <a href="#" class="modal__pas">Забыли пароль?</a>
+              </div>
+            </form>
+          </div>
+        </div>
+
         <div class="header__entry">
           <div class="entry__person">
             <img src="../assets/images/articles/avatar.png" alt="avatar" />
@@ -84,7 +104,7 @@
         <div class="products"></div>
       </div>
     </main>
-
+    
     <footer id="footer" class="footer">
       <div class="container footer__container">
         <div class="footer__logo">
@@ -158,6 +178,7 @@
 
     <script src="../js/products-data.js"></script>
     <script src="../js/products.js"></script>
+    <script src="../js/home.js"></script>
     <script
       src="https://kit.fontawesome.com/f8ca3b2196.js"
       crossorigin="anonymous"
