--- a/index.html
+++ b/index.html
@@ -70,6 +70,26 @@
           </li>
         </ul>
 
+        <div class="header__modal">
+          <div class="modal_content">
+            <div class="modal__close">
+              <i class="fa-solid fa-xmark" style="color: #414141;"></i>
+            </div>
+            <form class="modal_form">
+              <h2 class="modal_form__title">Вход</h2>
+              <div class="modal_form__inp">
+                <label for="number" class="number_label">Телефон</label>
+                <input type="number" name="number" id="number" placeholder="Phone..." required>
+              </div>
+              <button class="modal__btn">Вход</button>
+              <div class="modal__links">
+                <a href="#" class="modal__regist">Регистрация</a>
+                <a href="#" class="modal__pas">Забыли пароль?</a>
+              </div>
+            </form>
+          </div>
+        </div>
+
         <div class="header__entry">
           <div class="entry__person">
             <img src="./assets/images/articles/avatar.png" alt="avatar" />
@@ -282,7 +302,7 @@
               </div>
             </div>
           </div>
-          
+
           <div class="stock">
             <div class="stock__title">
               <h2 class="stock__text">Новинки</h2>
@@ -757,70 +777,72 @@
         </div>
       </section>
 
-      <footer id="footer" class="footer">
-        <div class="container footer__container">
-          <div class="footer__logo">
-            <a href="#"><img
-              src="./assets/images/articles/logo_footer.svg"
-              alt="logo footer"
-            /></a>
+    </main>
+
+    <footer id="footer" class="footer">
+      <div class="container footer__container">
+        <div class="footer__logo">
+          <a href="#"><img
+            src="./assets/images/articles/logo_footer.svg"
+            alt="logo footer"
+          /></a>
+        </div>
+        <ul class="footer__ul">
+          <li class="footer__list">
+            <a href="#" class="footer__list_link">О компании</a>
+          </li>
+          <li class="footer__list">
+            <a href="#" class="footer__list_link">Контакты</a>
+          </li>
+          <li class="footer__list">
+            <a href="#" class="footer__list_link">Вакансии</a>
+          </li>
+          <li class="footer__list">
+            <a href="#" class="footer__list_link">Статьи</a>
+          </li>
+          <li class="footer__list">
+            <a href="#" class="footer__list_link"
+              >Политика обработки персональных данных</a
+            >
+          </li>
+        </ul>
+
+        <ul class="footer__icons">
+          <li class="footer__icons_list">
+            <a href="#" class="footer__icons_link">
+              <i class="fa-brands fa-instagram" style="color: #ff0000;"></i>
+            </a>
+          </li>
+          <li class="footer__icons_list">
+            <a href="#" class="footer__icons_link">
+              <i class="fa-brands fa-vk" style="color: #0561ff;"></i>
+            </a>
+          </li>
+          <li class="footer__icons_list">
+            <a href="#" class="footer__icons_link">
+              <i class="fa-brands fa-square-facebook" style="color: #0050db;"></i>
+            </a>
+          </li>
+          <li class="footer__icons_list">
+            <a href="#" class="footer__icons_link">
+              <i class="fa-brands fa-odnoklassniki" style="color: #ffae00;"></i>
+            </a>
+          </li>
+        </ul>
+
+        <div class="footer__contact">
+          <div class="number">
+            <i class="fa-solid fa-phone" style="color: #000;"></i>
+            <p class="number__p">8 800 777 33 33</p>
           </div>
-          <ul class="footer__ul">
-            <li class="footer__list">
-              <a href="#" class="footer__list_link">О компании</a>
-            </li>
-            <li class="footer__list">
-              <a href="#" class="footer__list_link">Контакты</a>
-            </li>
-            <li class="footer__list">
-              <a href="#" class="footer__list_link">Вакансии</a>
-            </li>
-            <li class="footer__list">
-              <a href="#" class="footer__list_link">Статьи</a>
-            </li>
-            <li class="footer__list">
-              <a href="#" class="footer__list_link"
-                >Политика обработки персональных данных</a
-              >
-            </li>
-          </ul>
-
-          <ul class="footer__icons">
-            <li class="footer__icons_list">
-              <a href="#" class="footer__icons_link">
-                <i class="fa-brands fa-instagram" style="color: #ff0000;"></i>
-              </a>
-            </li>
-            <li class="footer__icons_list">
-              <a href="#" class="footer__icons_link">
-                <i class="fa-brands fa-vk" style="color: #0561ff;"></i>
-              </a>
-            </li>
-            <li class="footer__icons_list">
-              <a href="#" class="footer__icons_link">
-                <i class="fa-brands fa-square-facebook" style="color: #0050db;"></i>
-              </a>
-            </li>
-            <li class="footer__icons_list">
-              <a href="#" class="footer__icons_link">
-                <i class="fa-brands fa-odnoklassniki" style="color: #ffae00;"></i>
-              </a>
-            </li>
-          </ul>
-
-          <div class="footer__contact">
-            <div class="number">
-              <i class="fa-solid fa-phone" style="color: #000;"></i>
-              <p class="number__p">8 800 777 33 33</p>
-            </div>
-            <div class="number__logo">
-              <p class="logo__p">Дизайн</p>
-              <img src="./assets/images/articles/logo-zasovskiy-small-black.svg" alt="number logo">
-            </div>
+          <div class="number__logo">
+            <p class="logo__p">Дизайн</p>
+            <img src="./assets/images/articles/logo-zasovskiy-small-black.svg" alt="number logo">
           </div>
         </div>
-      </footer>
-    </main>
+      </div>
+    </footer>
+
     <script src="./js/home.js"></script>
     <script
       src="https://kit.fontawesome.com/f8ca3b2196.js"
