--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
             <a href="./pages/categories.html" class="btn__text">Каталог</a>
           </button>
 
-          <div class="header__search">
+          <form class="header__search">
             <input
               type="text"
               name="search_panel"
               id="input_search"
               placeholder="Найти товар"
             />
-            <a href="#" class="search__link">
+            <button class="search__link search__link--btn" type="submit">
               <i
                 class="fa-solid fa-magnifying-glass"
                 style="color: #000000"
               ></i>
-            </a>
-          </div>
+            </button>
+          </form>
         </div>
 
         <ul class="header__icons_ul">
@@ -57,29 +57,39 @@
             <i class="fa-regular fa-heart fa-lg" style="color: #000000"></i>
             <p class="header__icons_text">Избранное</p>
           </li>
-          <li class="header__icons_list">
-            <i class="fa-solid fa-box fa-lg" style="color: #000000"></i>
-            <p class="header__icons_text">продукты</p>
-          </li>
-          <li class="header__icons_list">
-            <i
-              class="fa-solid fa-cart-shopping fa-lg"
-              style="color: #000000"
-            ></i>
-            <p class="header__icons_text">Корзина</p>
-          </li>
+          <a href="./pages/products.html">
+            <li class="header__icons_list">
+              <i class="fa-solid fa-box fa-lg" style="color: #000000"></i>
+              <p class="header__icons_text">продукты</p>
+            </li>
+          </a>
+          <a href="./pages/cart.html">
+            <li class="header__icons_list">
+              <i
+                class="fa-solid fa-cart-shopping fa-lg"
+                style="color: #000000"
+              ></i>
+              <p class="header__icons_text">Корзина</p>
+            </li>
+          </a>
         </ul>
 
         <div class="header__modal">
           <div class="modal_content">
             <div class="modal__close">
-              <i class="fa-solid fa-xmark" style="color: #414141;"></i>
+              <i class="fa-solid fa-xmark" style="color: #414141"></i>
             </div>
             <form class="modal_form">
               <h2 class="modal_form__title">Вход</h2>
               <div class="modal_form__inp">
                 <label for="number" class="number_label">Телефон</label>
-                <input type="number" name="number" id="number" placeholder="Phone..." required>
+                <input
+                  type="number"
+                  name="number"
+                  id="number"
+                  placeholder="Phone..."
+                  required
+                />
               </div>
               <button class="modal__btn">Вход</button>
               <div class="modal__links">
@@ -123,7 +133,9 @@
             <div class="stock__title">
               <h2 class="stock__text">Акции</h2>
               <div class="all_product">
-                <a href="./pages/products.html" class="product__text">Все продукты</a>
+                <a href="./pages/products.html" class="product__text"
+                  >Все продукты</a
+                >
                 <i
                   class="fa-solid fa-chevron-right"
                   style="color: #606060; padding-top: 5px"
@@ -307,7 +319,9 @@
             <div class="stock__title">
               <h2 class="stock__text">Новинки</h2>
               <div class="all_product">
-                <a href="./pages/products.html" class="product__text">Все продукты</a>
+                <a href="./pages/products.html" class="product__text"
+                  >Все продукты</a
+                >
                 <i
                   class="fa-solid fa-chevron-right"
                   style="color: #606060; padding-top: 5px"
@@ -331,10 +345,9 @@
                 </div>
 
                 <div class="product__box_text">
-
-                    <div class="price__part news__price">
-                      <h3 class="price__text--bold">599,99₽</h3>
-                    </div>
+                  <div class="price__part news__price">
+                    <h3 class="price__text--bold">599,99₽</h3>
+                  </div>
 
                   <h3 class="product__info">
                     Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»
@@ -366,10 +379,9 @@
                 </div>
 
                 <div class="product__box_text">
-
-                    <div class="price__part news__price">
-                      <h3 class="price__text--bold">599,99₽</h3>
-                    </div>
+                  <div class="price__part news__price">
+                    <h3 class="price__text--bold">599,99₽</h3>
+                  </div>
 
                   <h3 class="product__info">
                     Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»
@@ -401,10 +413,9 @@
                 </div>
 
                 <div class="product__box_text">
-
-                    <div class="price__part news__price">
-                      <h3 class="price__text--bold">599,99₽</h3>
-                    </div>
+                  <div class="price__part news__price">
+                    <h3 class="price__text--bold">599,99₽</h3>
+                  </div>
 
                   <h3 class="product__info">
                     Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»
@@ -436,10 +447,9 @@
                 </div>
 
                 <div class="product__box_text">
-
-                    <div class="price__part news__price">
-                      <h3 class="price__text--bold">599,99₽</h3>
-                    </div>
+                  <div class="price__part news__price">
+                    <h3 class="price__text--bold">599,99₽</h3>
+                  </div>
 
                   <h3 class="product__info">
                     Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»
@@ -462,7 +472,9 @@
             <div class="stock__title">
               <h2 class="stock__text">Покупали раньше</h2>
               <div class="all_product">
-                <a href="./pages/products.html" class="product__text">Все продукты</a>
+                <a href="./pages/products.html" class="product__text"
+                  >Все продукты</a
+                >
                 <i
                   class="fa-solid fa-chevron-right"
                   style="color: #606060; padding-top: 5px"
@@ -486,10 +498,9 @@
                 </div>
 
                 <div class="product__box_text">
-
-                    <div class="price__part news__price">
-                      <h3 class="price__text--bold">77,99₽</h3>
-                    </div>
+                  <div class="price__part news__price">
+                    <h3 class="price__text--bold">77,99₽</h3>
+                  </div>
 
                   <h3 class="product__info">
                     Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»
@@ -521,10 +532,9 @@
                 </div>
 
                 <div class="product__box_text">
-
-                    <div class="price__part news__price">
-                      <h3 class="price__text--bold">77,99₽</h3>
-                    </div>
+                  <div class="price__part news__price">
+                    <h3 class="price__text--bold">77,99₽</h3>
+                  </div>
 
                   <h3 class="product__info">
                     Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»
@@ -556,10 +566,9 @@
                 </div>
 
                 <div class="product__box_text">
-
-                    <div class="price__part news__price">
-                      <h3 class="price__text--bold">77,99₽</h3>
-                    </div>
+                  <div class="price__part news__price">
+                    <h3 class="price__text--bold">77,99₽</h3>
+                  </div>
 
                   <h3 class="product__info">
                     Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»
@@ -591,10 +600,9 @@
                 </div>
 
                 <div class="product__box_text">
-
-                    <div class="price__part news__price">
-                      <h3 class="price__text--bold">77,99₽</h3>
-                    </div>
+                  <div class="price__part news__price">
+                    <h3 class="price__text--bold">77,99₽</h3>
+                  </div>
 
                   <h3 class="product__info">
                     Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»
@@ -776,15 +784,15 @@
           </div>
         </div>
       </section>
-
     </main>
 
     <footer id="footer" class="footer">
       <div class="container footer__container">
         <div class="footer__logo">
-          <a href="#"><img
-            src="./assets/images/articles/logo_footer.svg"
-            alt="logo footer"
+          <a href="#"
+            ><img
+              src="./assets/images/articles/logo_footer.svg"
+              alt="logo footer"
           /></a>
         </div>
         <ul class="footer__ul">
@@ -810,34 +818,40 @@
         <ul class="footer__icons">
           <li class="footer__icons_list">
             <a href="#" class="footer__icons_link">
-              <i class="fa-brands fa-instagram" style="color: #ff0000;"></i>
+              <i class="fa-brands fa-instagram" style="color: #ff0000"></i>
             </a>
           </li>
           <li class="footer__icons_list">
             <a href="#" class="footer__icons_link">
-              <i class="fa-brands fa-vk" style="color: #0561ff;"></i>
+              <i class="fa-brands fa-vk" style="color: #0561ff"></i>
             </a>
           </li>
           <li class="footer__icons_list">
             <a href="#" class="footer__icons_link">
-              <i class="fa-brands fa-square-facebook" style="color: #0050db;"></i>
+              <i
+                class="fa-brands fa-square-facebook"
+                style="color: #0050db"
+              ></i>
             </a>
           </li>
           <li class="footer__icons_list">
             <a href="#" class="footer__icons_link">
-              <i class="fa-brands fa-odnoklassniki" style="color: #ffae00;"></i>
+              <i class="fa-brands fa-odnoklassniki" style="color: #ffae00"></i>
             </a>
           </li>
         </ul>
 
         <div class="footer__contact">
           <div class="number">
-            <i class="fa-solid fa-phone" style="color: #000;"></i>
+            <i class="fa-solid fa-phone" style="color: #000"></i>
             <p class="number__p">8 800 777 33 33</p>
           </div>
           <div class="number__logo">
             <p class="logo__p">Дизайн</p>
-            <img src="./assets/images/articles/logo-zasovskiy-small-black.svg" alt="number logo">
+            <img
+              src="./assets/images/articles/logo-zasovskiy-small-black.svg"
+              alt="number logo"
+            />
           </div>
         </div>
       </div>
