--- a/pages/category.html
+++ b/pages/category.html
@@ -57,13 +57,15 @@
             <i class="fa-solid fa-box fa-lg" style="color: #000000"></i>
             <p class="header__icons_text">продукты</p>
           </li>
+          <a href="./cart.html">
           <li class="header__icons_list">
             <i
               class="fa-solid fa-cart-shopping fa-lg"
               style="color: #000000"
             ></i>
-            <p class="header__icons_text">Корзина</p>
-          </li>
+              <p class="header__icons_text">Корзина</p>
+            </li>
+          </a>
         </ul>
 
         <div class="header__modal">
@@ -103,7 +105,7 @@
         </div>
       </div>
     </header>
-    ''
+
 
     <main id="main" class="main">
       <div class="container">
@@ -114,11 +116,9 @@
             >Каталог</a
           >
           <i class="fa-solid fa-chevron-right fa-xs" style="color: #414141"></i>
-          <a href="#" class="global__link global__link">Молоко, сыр, яйцо</a>
+          <a href="#" class="global__link category_link"></a>
           <i class="fa-solid fa-chevron-right fa-xs" style="color: #414141"></i>
-          <a href="#" class="global__link global__link--active"
-            >Масло ПРОСТОКВАШИНО сливочное в/с 82% фольга без змж, Россия, 180
-            г</a
+          <a href="#" class="global__link global__link--active category_link2"></a
           >
         </div>
       </div>
@@ -126,7 +126,6 @@
       <section id="carusel__hero" class="carusel__hero">
         <div class="container carusel__container">
           <h3 class="carusel__title">
-            Масло ПРОСТОКВАШИНО сливочное в/с 82% фольга без змж, Россия, 180 г
           </h3>
           <div class="carusel__rate_box">
             <p class="carusel__text">арт. 371431</p>
@@ -158,7 +157,7 @@
             </div>
 
             <div class="carusel__text_box">
-              <div class="carusel__price_card">
+              <!-- <div class="carusel__price_card">
                 <div class="price__box">
                   <h3>192,69 ₽</h3>
                   <p>Обычная цена</p>
@@ -169,16 +168,17 @@
                 </div>
               </div>
 
-              <button class="carusel__btn">
+              <button class="carusel__btn" onclick="btnCart()">
                 <i
                   class="fa-solid fa-cart-shopping fa-lg"
                   style="color: #fff"
                 ></i>
                 <h2 class="carusel__btn_text">В корзину</h2>
-              </button>
+              </button> -->
             </div>
           </div>
         </div>
+        <div class="card"></div>
       </section>
 
       <section id="catg__product" class="catg__product">
