--- a/pages/products.html
+++ b/pages/products.html
@@ -57,13 +57,15 @@
             <i class="fa-solid fa-box fa-lg" style="color: #000000"></i>
             <p class="header__icons_text">продукты</p>
           </li>
-          <li class="header__icons_list">
-            <i
-              class="fa-solid fa-cart-shopping fa-lg"
-              style="color: #000000"
-            ></i>
-            <p class="header__icons_text">Корзина</p>
-          </li>
+          <a href="./cart.html">
+            <li class="header__icons_list">
+              <i
+                class="fa-solid fa-cart-shopping fa-lg"
+                style="color: #000000"
+              ></i>
+              <p class="header__icons_text">Корзина</p>
+            </li>
+          </a>
         </ul>
 
         <div class="header__modal">
@@ -104,7 +106,7 @@
         <div class="products"></div>
       </div>
     </main>
-    
+
     <footer id="footer" class="footer">
       <div class="container footer__container">
         <div class="footer__logo">
