delete cart product data part

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                 ></i>
               </div>
             </div>
-
-            <div class="products">
+            <div class="products products__none"></div>
+            <div class="product">
               <div class="product__box">
                 <div class="product__img">
                   <img
